--- a/asivamosffie.web/asivamosffie/.prettierrc.json
+++ b/asivamosffie.web/asivamosffie/.prettierrc.json
@@ -3,7 +3,7 @@
     "trailingComma": "none",
     "endOfLine": "auto",
     "tabWidth": 2,
-    "semi": false,
+    "semi": true,
     
     "arrowParens": "avoid",
     "bracketSpacing": true,
