--- a/asivamosffie.web/asivamosffie/package.json
+++ b/asivamosffie.web/asivamosffie/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
     "flexboxgrid": "^6.3.1",
+    "humanize-plus": "^1.8.2",
     "moment": "^2.27.0",
     "ng2-currency-mask": "^9.0.2",
     "ngx-currency": "^2.3.3",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "~0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
+    "@types/humanize-plus": "^1.8.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
