--- a/asivamosffie.web/asivamosffie/package.json
+++ b/asivamosffie.web/asivamosffie/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~9.1.9",
     "export-from-json": "^1.3.4",
     "flexboxgrid": "^6.3.1",
+    "humanize-plus": "^1.8.2",
     "moment": "^2.27.0",
     "ng2-currency-mask": "^9.0.2",
     "ngx-currency": "^2.3.3",
