carga ajuste programación

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -24,6 +24,8 @@
     "DirectoryBaseFlujoInversion": "FlujoInversion",
     "DirectoryBasePagos": "Pagos",
     "DirectoryBaseRendimientos": "Rendimientos",
+    "DirectoryBaseAjusteProgramacionObra": "AjusteProgramacionObra",
+    "DirectoryBaseAjusteProgramacionFlujo": "AjusteProgramacionFlujo",
     "DirectoryRutaCargaActaTerminacionContrato": "RutaCargaActaTerminacionContrato",
     "YearVigente": "2015",
     "YearSiguienteEsVigente": false
