--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -7,7 +7,7 @@
     "MailPort": 26,
     "EnableSSL": "true",
     "SenderName": "noReply",
-    "Sender": "noreply_ffie@ivolucion.com",
+    "Sender": "noreply_ffie2@ivolucion.com",
     "Password": "Bogota2020*",
     "Secret": "asivamosffie@2020application",
     "asivamosffieIssuerJwt": "asivamosffie@2020application_issuer",
