--- a/asivamosffie.services/asivamosffie.services.csproj
+++ b/asivamosffie.services/asivamosffie.services.csproj
@@ -25,6 +25,9 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.1" />
   </ItemGroup>
   <ItemGroup>
+    <None Update="Templates\FFIE.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Templates\PDF\PerformanceMinute.liquid">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
