Subo el config por el bloqueante de los correos

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -1,14 +1,14 @@
-{
+{ //smtp-relay.sendinblue.com
   "AppSettings": {
     "Dominio": "https://localhost:44372/",
     "DominioFront": "http://localhost:4200/",
-    "MailServer": "mail.ivolucion.com",
+    "MailServer": "smtp-relay.sendinblue.com",
     "RutaLogo": "assets/img-FFIE.png",
-    "MailPort": 26,
+    "MailPort": 587,
     "EnableSSL": "true",
     "SenderName": "noReply",
     "Sender": "noreply_ffie2@ivolucion.com",
-    "Password": "Bogota2020*",
+    "Password": "C7s8kK6UObH4Ldj1",
     "Secret": "asivamosffie@2020application",
     "asivamosffieIssuerJwt": "asivamosffie@2020application_issuer",
     "asivamosffieAudienceJwt": "asivamosffie@2020application_issuer",
