Fase-2-Paquete-5 Upload performance minute

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -27,6 +27,7 @@
     "DirectoryBaseAjusteProgramacionObra": "AjusteProgramacionObra",
     "DirectoryBaseAjusteProgramacionFlujo": "AjusteProgramacionFlujo",
     "DirectoryRutaCargaActaTerminacionContrato": "RutaCargaActaTerminacionContrato",
+    "DirectoryBaseActaRendimientos": "ActaRendimientos",
     "YearVigente": "2015",
     "YearSiguienteEsVigente": false
   },
