--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -7,8 +7,8 @@
     "MailPort": 587,
     "EnableSSL": "true",
     "SenderName": "noReply",
-    "Sender": "noreply_ffie2@ivolucion.com",
-    "Password": "C7s8kK6UObH4Ldj1",
+    "Sender": "noreply_ffie@ivolucion.com",
+    "Password": "4nSIVwXvRQLrHUEc",
     "Secret": "asivamosffie@2020application",
     "asivamosffieIssuerJwt": "asivamosffie@2020application_issuer",
     "asivamosffieAudienceJwt": "asivamosffie@2020application_issuer",
