--- a/.gitignore
+++ b/.gitignore
@@ -342,3 +342,4 @@ healthchecksdb
 asivamosffie/.vs/asivamosffie/v16/.suo
 asivamosffie.web/asivamosffie/src/environments/environment.ts
 asivamosffie.web/package-lock.json
+asivamosffie.api/appsettings.json
