--- a/asivamosffie.web/asivamosffie/angular.json
+++ b/asivamosffie.web/asivamosffie/angular.json
@@ -122,6 +122,34 @@
                 }
               ]
             },
+            "stag": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.stag.ts"
+                }
+              ],
+              "optimization": true,
+              "outputHashing": "all",
+              "sourceMap": false,
+              "extractCss": true,
+              "namedChunks": false,
+              "extractLicenses": true,
+              "vendorChunk": false,
+              "buildOptimizer": true,
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "2mb",
+                  "maximumError": "5mb"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "6kb",
+                  "maximumError": "10kb"
+                }
+              ]
+            },
             "production": {
               "fileReplacements": [
                 {
@@ -164,6 +192,9 @@
             },
             "pro": {
               "browserTarget": "asivamosffie:build:pro"
+            },
+            "stag": {
+              "browserTarget": "asivamosffie:build:stag"
             }
           }
         },
