--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -41,6 +41,16 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "asivamosffieDatabase": "Server=asivamosffie.database.windows.net;Database=ClonpreproAsiVamosFFIE;User ID=adminffie;Password=SaraLiam2020*;MultipleActiveResultSets=False;Connection Timeout=120;"
+  },
+  "AzureAd": {
+    "AuthenticationMode": "ServicePrincipal",
+    "AuthorityUri": "https://login.microsoftonline.com/organizations/",
+    "ClientId": "dc96ec90-4c2e-41ba-9521-3dd507cabd37",
+    "TenantId": "edaff9c7-b44e-4ab0-aa46-d28824758a93",
+    "Scope": [ "https://analysis.windows.net/powerbi/api/.default" ],
+    "PbiUsername": "ivoluciondashboards@ivolucionembeddedtenant.onmicrosoft.com",
+    "PbiPassword": "Bogota2021*.",
+    "ClientSecret": "JSGRww_GFd__z7a8cvq8Cp-zyXvR26_cXi"
   }
 
 }
