--- a/asivamosffie.model/asivamosffie.model.csproj
+++ b/asivamosffie.model/asivamosffie.model.csproj
@@ -13,6 +13,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="Microsoft.PowerBI.Api" Version="3.21.0" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.0.53" />
   </ItemGroup>
 
