--- a/asivamosffie.services/asivamosffie.services.csproj
+++ b/asivamosffie.services/asivamosffie.services.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
@@ -12,6 +12,8 @@
     <PackageReference Include="iTextSharp" Version="5.5.13.1" />
     <PackageReference Include="itextsharp.xmlworker" Version="5.5.13.1" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+    <PackageReference Include="Microsoft.Identity.Client" Version="4.21.0" />
+    <PackageReference Include="Microsoft.PowerBI.Api" Version="3.21.0" />
     <PackageReference Include="System.Diagnostics.EventLog" Version="4.7.0" />
     <PackageReference Include="System.Globalization" Version="4.3.0" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.0.53" />
