--- a/asivamosffie.web/asivamosffie/package.json
+++ b/asivamosffie.web/asivamosffie/package.json
@@ -36,6 +36,7 @@
     "ngx-currency": "^2.3.3",
     "ngx-quill": "^12.0.1",
     "ngx-spinner": "^10.0.1",
+    "powerbi-client": "^2.18.0",
     "quill": "^1.3.7",
     "rxjs": "~6.5.4",
     "sha1": "^1.1.1",
