--- a/asivamosffie.web/asivamosffie/package.json
+++ b/asivamosffie.web/asivamosffie/package.json
@@ -30,7 +30,9 @@
     "@angular/router": "~9.1.9",
     "export-from-json": "^1.3.4",
     "flexboxgrid": "^6.3.1",
+    "html2canvas": "^1.1.1",
     "humanize-plus": "^1.8.2",
+    "jspdf": "^2.3.1",
     "moment": "^2.27.0",
     "ng2-currency-mask": "^9.0.2",
     "ngx-currency": "^2.3.3",
