prueba de concepto para generar graficos

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -29,7 +29,8 @@
     "DirectoryRutaCargaActaTerminacionContrato": "RutaCargaActaTerminacionContrato",
     "DirectoryBaseActaRendimientos": "ActaRendimientos",
     "YearVigente": "2015",
-    "YearSiguienteEsVigente": false
+    "YearSiguienteEsVigente": false,
+    "DirectoryCharts": "charts/"
   },
   "Logging": {
     "LogLevel": {
