cambio de ruta imagen graficos

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -30,7 +30,8 @@
     "DirectoryBaseActaRendimientos": "ActaRendimientos",
     "YearVigente": "2015",
     "YearSiguienteEsVigente": false,
-    "DirectoryCharts": "charts/"
+    //"DirectoryCharts": "C:/inetpub/wwwpreFrontendAsiVamosFFIE/assets/charts/" //prepro
+    "DirectoryCharts": "C:/inetpub/wwwfrontend/assets/charts/" //pruebas
   },
   "Logging": {
     "LogLevel": {
