control de  cambios campoo observaacioon y archivo project

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -31,7 +31,8 @@
     "YearVigente": "2015",
     "YearSiguienteEsVigente": false,
     //"DirectoryCharts": "C:/inetpub/wwwpreFrontendAsiVamosFFIE/assets/charts/" //prepro
-    "DirectoryCharts": "C:/inetpub/wwwfrontend/assets/charts/" //pruebas
+    "DirectoryCharts": "C:/inetpub/wwwfrontend/assets/charts/", //pruebas,
+    "DirectoryBaseSeguimientoSemanalAvanceFisico": "SeguimientoSemanalAvanceFisico"
   },
   "Logging": {
     "LogLevel": {
