--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -43,7 +43,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "asivamosffieDatabase": "Server=asivamosffie.database.windows.net;Database=preproAsiVamosFFIE;User ID=adminffie;Password=SaraLiam2020*;MultipleActiveResultSets=True;Connection Timeout=120;"
+    "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=db-asivamos-cert;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
   },
   "AzureAd": {
     "AuthenticationMode": "ServicePrincipal",
