--- a/asivamosffie.web/asivamosffie/package.json
+++ b/asivamosffie.web/asivamosffie/package.json
@@ -40,6 +40,7 @@
     "ngx-spinner": "^10.0.1",
     "powerbi-client": "^2.18.0",
     "quill": "^1.3.7",
+    "quill-image-drop-and-paste": "^1.2.10",
     "rxjs": "~6.5.4",
     "sha1": "^1.1.1",
     "tslib": "^1.10.0",
