--- a/asivamosffie.services/asivamosffie.services.csproj
+++ b/asivamosffie.services/asivamosffie.services.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Identity.Client" Version="4.21.0" />
     <PackageReference Include="Microsoft.PowerBI.Api" Version="3.21.0" />
+    <PackageReference Include="Select.HtmlToPdf.NetCore" Version="21.2.0" />
     <PackageReference Include="System.Diagnostics.EventLog" Version="4.7.0" />
     <PackageReference Include="System.Globalization" Version="4.3.0" />
     <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="3.0.53" />
