--- a/asivamosffie.api/Properties/launchSettings.json
+++ b/asivamosffie.api/Properties/launchSettings.json
@@ -15,14 +15,14 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/common",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
     "asivamosffie.api": {
       "commandName": "Project",
-      "launchUrl": "api/common",
+      "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
