--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -45,7 +45,7 @@
   "ConnectionStrings": {
     //"asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=db-asivamos-produc;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
     //"asivamosffieDatabase": "Server=cpcln.database.windows.net;Database=db-asivamos-cert;User ID=admincpcln;Password=4dm1nclN*;MultipleActiveResultSets=True;Connection Timeout=120;"
-    "asivamosffieDatabase": "Server=asivamosffie.database.windows.net;Database=devAsiVamosFFIE;User ID=adminffie;Password=SaraLiam2020*;MultipleActiveResultSets=True;Connection Timeout=120;"
+    "asivamosffieDatabase": "Server=asivamosffie.database.windows.net;Database=validacionODG;User ID=adminffie;Password=SaraLiam2020*;MultipleActiveResultSets=True;Connection Timeout=120;"
   },
   "AzureAd": {
     "AuthenticationMode": "ServicePrincipal",
