--- a/asivamosffie.api/Properties/launchSettings.json
+++ b/asivamosffie.api/Properties/launchSettings.json
@@ -15,7 +15,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "api/common",
+      "launchUrl": "api/common/getVersion",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
