--- a/asivamosffie.api/asivamosffie.api.csproj
+++ b/asivamosffie.api/asivamosffie.api.csproj
@@ -24,5 +24,5 @@
     <ProjectReference Include="..\asivamosffie.authorization\asivamosffie.authorization.csproj" />
     <ProjectReference Include="..\asivamosffie.services\asivamosffie.services.csproj" />
   </ItemGroup>
-  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="https://json-stat.org/format/schema/2.0/" /></VisualStudio></ProjectExtensions>
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JsonSchema="" /></VisualStudio></ProjectExtensions>
 </Project>
