--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -43,9 +43,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=db-asivamos-produc;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
+    //"asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=db-asivamos-prepro2;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
     //"asivamosffieDatabase": "Server=cpcln.database.windows.net;Database=db-asivamos-cert;User ID=admincpcln;Password=4dm1nclN*;MultipleActiveResultSets=True;Connection Timeout=120;"
-    "asivamosffieDatabase": "Server=asivamosffie.database.windows.net;Database=Opt;User ID=adminffie;Password=SaraLiam2020*;MultipleActiveResultSets=True;Connection Timeout=120;"
+    "asivamosffieDatabase": "Server=asivamosffie.database.windows.net;Database=db-asivamos-prepro-20220713_1137;User ID=adminffie;Password=SaraLiam2020*;MultipleActiveResultSets=True;Connection Timeout=120;"
   },
   "AzureAd": {
     "AuthenticationMode": "ServicePrincipal",
