--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -43,7 +43,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=devAsiVamosFFIE;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
+    // "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=devAsiVamosFFIE;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
+    "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=db-asivamos-prepro;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
 
   },
   "AzureAd": {
