--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,4 @@ asivamosffie.web/asivamosffie/src/environments/environment.ts
 asivamosffie.web/package-lock.json
 asivamosffie.api/appsettings.json
 *.json
+*.json
