Fix Cambio Procesos de seleccion crear seleccion nueva

--- a/asivamosffie.api/appsettings.json
+++ b/asivamosffie.api/appsettings.json
@@ -43,7 +43,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-       "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=db-asivamos-produc;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
+       "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=Novedades;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
     // "asivamosffieDatabase": "Server=srv-db-asivamos.database.windows.net;Database=090222;User ID=admindbasivamos;Password=4siv4mos2021*;MultipleActiveResultSets=True;Connection Timeout=120;"
 
   },
